# qrkodo_backend

./: Dockerfile  docker-compose.yaml  pyproject.toml
api/: main.py
api/routers/: qrcode.py
api/schemas/: qrcode.py
