[tool.poetry]
name = "api-backend"
version = "0.1.0"
description = ""
authors = ["p1atdev contact@p1atdev.tk"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
qrcode = "^7.3.1"
Pillow = "^9.0.1"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
